Add java.xml.bind module when running under java > 8